<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_insert"
        android:icon="@drawable/menu_newflight"
        android:showAsAction="always"
        android:title="@string/action_insert"/>
    <item
        android:id="@+id/action_nop"
        android:showAsAction="always"
        android:title="@string/action_nop"/>
    <item
        android:id="@+id/action_date"
        android:showAsAction="always"
        android:title="@string/action_nop"/>
    <item
        android:id="@+id/action_ready"
        android:showAsAction="always"
        android:title="@string/action_ready"/>
    <item
        android:id="@+id/action_open"
        android:showAsAction="always"
        android:title="@string/action_open"/>
    <item
        android:id="@+id/action_45min"
        android:showAsAction="always"
        android:title="@string/action_45min"/>
    <item
        android:id="@+id/action_all"
        android:showAsAction="always"
        android:title="@string/action_all"/>
    <item
        android:id="@+id/action_my"
        android:showAsAction="always"
        android:title="@string/action_my"/>
    <item
        android:id="@+id/action_various"
        android:showAsAction="always"
        android:title="@string/action_various">
        <menu>
            <item
                android:id="@+id/action_pass"
                android:showAsAction="always"
                android:title="@string/action_pass"/>
            <item
                android:id="@+id/action_resv"
                android:showAsAction="always"
                android:title="@string/action_resv"/>
            <item
                android:id="@+id/action_duty"
                android:showAsAction="always"
                android:title="@string/action_duty"/>
            <item
                android:id="@+id/action_leden"
                android:showAsAction="always"
                android:title="@string/action_leden"/>
            <item
                android:id="@+id/action_ezac"
                android:showAsAction="always"
                android:title="@string/action_ezac"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_meteo_group"
        android:showAsAction="always"
        android:title="@string/action_meteo_group">
        <menu>
            <item
                android:id="@+id/action_meteo_1"
                android:showAsAction="always"
                android:title="@string/action_meteo"/>  
            <item
                android:id="@+id/action_meteo_2"
                android:showAsAction="always"
                android:title="@string/action_rasp"/>  
        </menu>
    </item>
    <item
        android:id="@+id/action_info"
        android:showAsAction="always"
        android:title="@string/action_info">
        <menu>
            <item
                android:id="@+id/action_ogn_flarm"
                android:showAsAction="always"
                android:title="@string/action_ogn_flarm"/>
            <item
                android:id="@+id/action_adsb"
                android:showAsAction="always"
                android:title="@string/action_adsb"/>
            <item
                android:id="@+id/action_adsb_lcl"
                android:showAsAction="always"
                android:title="@string/action_adsb_lcl"/>
            <item
                android:id="@+id/action_ntm_nld"
                android:showAsAction="always"
                android:title="@string/action_notam_nld"/>
            <item
                android:id="@+id/action_ntm_blx"
                android:showAsAction="always"
                android:title="@string/action_notam_blx"/> 
        </menu>
    </item>
    <item
        android:id="@+id/action_net"
        android:showAsAction="always"
        android:title="@string/action_nop"/>
    <item
        android:id="@+id/misc"
        android:showAsAction="always"
        android:title="@string/action_misc">
        <menu>
            <item
                android:id="@+id/action_db_start"
                android:title="@string/action_db_start"/>
            <item
                android:id="@+id/action_db_close"
                android:title="@string/action_db_close"/>
            <item
                android:id="@+id/action_db_pass"
                android:title="@string/action_db_pass"/>
            <item
                android:id="@+id/action_db_export_CSV"
                android:title="@string/action_db_export_CSV"/>
            <item
                android:id="@+id/action_settings"
                android:title="@string/action_settings"/>
            <item
                android:id="@+id/action_service"
                android:title="@string/action_services"/>
            <item
                android:id="@+id/action_about"
                android:title="@string/action_about"/>
        </menu>
    </item>

</menu>