<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TableRow
        android:layout_weight="1.0"
        android:weightSum="1.0" >

        <TextView
            android:id="@+id/label1"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/hdr_id"
            android:lines="1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/label2"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/hdr_name"
            android:lines="1"
            android:textSize="24sp" >
        </TextView>

        <TextView
            android:id="@+id/label3"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/hdr_period"
            android:lines="1"
            android:textSize="24sp" >
        </TextView>

        <TextView
            android:id="@+id/label4"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/hdr_kind"
            android:lines="1"
            android:textSize="24sp" >
        </TextView>

        <TextView
            android:id="@+id/label5"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/hdr_goal"
            android:lines="1"
            android:textSize="24sp" >
        </TextView>

        <TextView
            android:id="@+id/label6"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/hdr_reserve"
            android:lines="1"
            android:textSize="24sp" >
        </TextView>

        <Button
            android:id="@+id/button_close"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/pass_close_btn" />
    </TableRow>
    
        <TableRow
            android:layout_weight="1.0"
            android:weightSum="1.0" >

            <View
                android:id="@+id/line1"
                android:layout_width="0dip"
                android:layout_height="3dip"
                android:layout_weight="1"
                android:background="#FF909090"
                android:padding="5dip" />
        </TableRow>

</TableLayout>